test/programs/error-ellipses-3-2.expected
error[E002]: too few ellipses
./test/programs/error-ellipses-3-2.defs:1:33
   |
 1 | (def (flatten (list (list (list $x ..) ..) ..))
   |                                 ^^ matched with 3 ellipses in pattern
./test/programs/error-ellipses-3-2.defs:2:9
   |
 2 |   (list $x .. ..))
   |         ^^ used with 2 ellipses in constructor
help: variables must be used with the same number of ellipses they were matched with
