test/programs/error-ellipses-3-2.defs
(def (flatten (list (list (list $x ..) ..) ..))
  (list $x .. ..))